@@ -1,3 +1,8 @@
+2010-03-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoimageclutter.py: Code refactoring.
+	* utils/nullobject.py: Initial import.
+
 2010-03-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* fspot.py, photoimageclutter.py: Added support for F-Spot Rating.
